--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,5 @@ edition = "2021"
 
 [dependencies]
 tokio = { version = "1", features = ["full"] }
-tokio-native-tls = "0.3.1"
 clap = "4.2.2"
+regex = "1.9.5"
